@@ -30,6 +30,7 @@ https://github.com/elastic/beats/compare/v6.4.0...6.4[Check the HEAD diff]
 *Affecting all Beats*
 
 - Fixed `add_host_metadata` not initializing correctly on Windows. {issue}7715[7715]
+- Add backoff on error support to redis output. {pull}7781[7781]
 
 *Auditbeat*
 
